refactor: fix the inspection findings in the files this branch touches
- Overrides carry their parent's `@NotNull`, array results with it on
  the array.
- The EEx and HEEx view providers' `getContentElementType` overrides
  suppress `UnstableApiUsage`.
- Javadoc links to an inaccessible platform class become `{@code}`.
- `mix.Project` destructures the canonical folder marks and sets
  `isExcludeOutput` as a property.
- `ElixirModuleType.getBigIcon` goes: `ModuleType` no longer declares
  it, and nothing calls it.
- `Status`, the lexers and the `ParametersPanel`s take the simpler
  forms the inspections ask for (`isEmpty()`, `getFirst()`,
  `requireNonNullElse`, a pattern variable); the Elixir and IEx panels
  inline helpers only ever given `"erl"` and `1`, and the Erl, ESpec and
  ExUnit panels drop private accessors nothing calls.
- `ModuleSettings` names the `exclude-output` tag itself rather than
  through an internal JPS constant.
- `Stubbic.resolvedFinalArity` is declared non-null, as its three
  implementations and its own documentation already have it.
- `Deserialized`'s guard loops, dead while `GUARD_LENGTH` is 0, say so.